[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "langchain-google-genai>=2.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "pandas>=2.2.3",
]
